# sparky-game-engine

./: CMakeLists.txt  game.cpp  game.hpp  main.cpp  readme.txt  sparky.sln  sparky.vcxproj  sparky.vcxproj.filters
Debug/: sparky.ilk  vc120.idb
Debug/sparky.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sparky.lastbuildstate
Release/sparky.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sparky.lastbuildstate
assets/: Thumbs.db
data/: config.scfg  sparky - Shortcut.lnk
dependencies/lib/assimp/: assimpd.lib
doc/html/: Thumbs.db  _g_l_s_lobject_8hpp_source.html  ambientshader_8hpp_source.html  annotated.html  buffers_8hpp_source.html  camera_8hpp_source.html  chunk_8hpp_source.html  classes.html  classsparky_1_1_ambient_shader-members.html  classsparky_1_1_ambient_shader.html  classsparky_1_1_array_buffer-members.html  classsparky_1_1_array_buffer.html  classsparky_1_1_buffer-members.html  classsparky_1_1_buffer.html  classsparky_1_1_camera-members.html  classsparky_1_1_camera.html  classsparky_1_1_chunk-members.html  classsparky_1_1_chunk.html  classsparky_1_1_comparer-members.html  classsparky_1_1_comparer.html  classsparky_1_1_config_file-members.html  classsparky_1_1_config_file.html  classsparky_1_1_debug_log-members.html  classsparky_1_1_debug_log.html  classsparky_1_1_deferred_shader-members.html  classsparky_1_1_deferred_shader.html  classsparky_1_1_directional_light-members.html  classsparky_1_1_directional_light.html  classsparky_1_1_directional_shader-members.html  classsparky_1_1_directional_shader.html  classsparky_1_1_directory-members.html  classsparky_1_1_event_manager-members.html  classsparky_1_1_event_manager.html  classsparky_1_1_frustum-members.html  classsparky_1_1_frustum.html  classsparky_1_1_g_buffer-members.html  classsparky_1_1_g_buffer.html  classsparky_1_1_g_l_device-members.html  classsparky_1_1_g_l_device.html  classsparky_1_1_g_l_s_l_object-members.html  (+218 more)
doc/html/html/: _g_l_s_lobject_8hpp_source.html  ambientshader_8hpp_source.html  annotated.html  buffers_8hpp_source.html  camera_8hpp_source.html  chunk_8hpp_source.html  classes.html  classsparky_1_1_ambient_shader-members.html  classsparky_1_1_ambient_shader.html  classsparky_1_1_array_buffer-members.html  classsparky_1_1_array_buffer.html  classsparky_1_1_buffer-members.html  classsparky_1_1_buffer.html  classsparky_1_1_camera-members.html  classsparky_1_1_camera.html  classsparky_1_1_chunk-members.html  classsparky_1_1_chunk.html  classsparky_1_1_comparer-members.html  classsparky_1_1_comparer.html  classsparky_1_1_config_file-members.html  classsparky_1_1_config_file.html  classsparky_1_1_debug_log-members.html  classsparky_1_1_debug_log.html  classsparky_1_1_deferred_shader-members.html  classsparky_1_1_deferred_shader.html  classsparky_1_1_directional_light-members.html  classsparky_1_1_directional_light.html  classsparky_1_1_directional_shader-members.html  classsparky_1_1_directional_shader.html  classsparky_1_1_directory-members.html  classsparky_1_1_event_manager-members.html  classsparky_1_1_event_manager.html  classsparky_1_1_frustum-members.html  classsparky_1_1_frustum.html  classsparky_1_1_g_buffer-members.html  classsparky_1_1_g_buffer.html  classsparky_1_1_g_l_device-members.html  classsparky_1_1_g_l_device.html  classsparky_1_1_g_l_s_l_object-members.html  classsparky_1_1_g_l_s_l_object.html  (+205 more)
doc/html/latex/: annotated.tex  classsparky_1_1_ambient_shader.tex  classsparky_1_1_camera.tex  classsparky_1_1_chunk.tex  classsparky_1_1_config_file.tex  (+54 more)
doc/latex/: annotated.tex  classsparky_1_1_ambient_shader.eps  classsparky_1_1_array_buffer.tex  classsparky_1_1_buffer.tex  classsparky_1_1_chunk.eps  classsparky_1_1_chunk.tex  classsparky_1_1_comparer.tex  classsparky_1_1_deferred_shader.eps  classsparky_1_1_directional_light.eps  classsparky_1_1_directional_light.tex  classsparky_1_1_directional_shader.tex  classsparky_1_1_event_manager.tex  classsparky_1_1_g_buffer.tex  classsparky_1_1_g_l_s_l_object.tex  classsparky_1_1_game_manager.eps  classsparky_1_1_game_object.eps  classsparky_1_1_game_object.tex  classsparky_1_1_i_mesh_component.tex  classsparky_1_1_i_render_component.eps  classsparky_1_1_i_render_component.tex  classsparky_1_1_i_shader_component.eps  classsparky_1_1_i_shader_component.tex  classsparky_1_1_input.eps  classsparky_1_1_input.tex  classsparky_1_1_mesh_data.eps  classsparky_1_1_mesh_renderer.eps  classsparky_1_1_mesh_renderer.tex  classsparky_1_1_model.eps  classsparky_1_1_model.tex  classsparky_1_1_mouse.eps  classsparky_1_1_mouse.tex  classsparky_1_1_point_light.tex  classsparky_1_1_point_shader.tex  classsparky_1_1_pool_manager.eps  classsparky_1_1_quaternion_3_01_t_01_4.tex  classsparky_1_1_rect.tex  classsparky_1_1_rect_3_01_t_01_4.tex  classsparky_1_1_ref.eps  classsparky_1_1_ref.tex  classsparky_1_1_resource_holder.tex  (+26 more)
shaders/: ambient_fragment.glsl  ambient_vertex.glsl  basic_fragment.glsl  basic_vertex.glsl  deferred_fragment.glsl  deferred_vertex.glsl  directional_fragment.glsl  point_fragment.glsl
shaders/core/: lighting.glsl
src/core/: camera.cpp  gamemanager.cpp  gameobject.cpp  iobject.cpp  object.cpp  pool.cpp  ref.cpp  resourcemanager.cpp  scene.cpp  time.cpp  window.cpp
src/ext/: noiseutils.cpp
src/generation/: chunk.cpp  voxel.cpp  world.cpp
src/input/: eventmanager.cpp  ievent.cpp  input.cpp  mouse.cpp
src/lighting/: directionallight.cpp  light.cpp  pointlight.cpp
src/math/: frustum.cpp  transform.cpp
src/rendering/: GLSLobject.cpp  ambientshader.cpp  basicshader.cpp  buffers.cpp  deferredshader.cpp  directionalshader.cpp  finalshader.cpp  gbuffer.cpp  imesh.cpp  irender.cpp  ishader.cpp  meshdata.cpp  meshrenderer.cpp  model.cpp  pointshader.cpp  program.cpp  texture.cpp  uniform.cpp  vertex.cpp
src/utils/: config.cpp  directory.cpp  gldevice.cpp  string.cpp  threadmanager.cpp  threadpool.cpp
themes/: sparky_npp_dark_theme_config.xml  sparky_npp_dark_theme_glsl.xml
(+191 files in other folders)
